# fabriq

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-api  Dockerfile-gitops  Dockerfile-reconciler  Dockerfile-service  PRODUCT.md  README.md  diesel.toml  sqlx-data.json
.github/workflows/: branch-create.yaml  branch-delete.yaml  build-test.yaml  containerize-api.yaml  containerize-gitops.yaml  containerize-reconciler.yaml  containerize-service.yaml  containerize.yaml  dependency-audit.yaml  release.yaml  rust-ci.yml  security-audit.yaml  static-analysis.yaml
benches/: list_template_grpc.rs
crates/akira-core/: Cargo.toml  build.rs
crates/akira-core/proto/: assignment.proto  common.proto  config.proto  deployment.proto  event.proto  health.proto  host.proto  target.proto  template.proto  workload.proto  workspace.proto
crates/akira-core/src/: dispatcher.rs  event_stream.rs  lib.rs  persistence.rs  processor.rs  protobufs.rs  test.rs
crates/akira-core/src/api/client/: config.rs  deployment.rs  interceptor.rs  mod.rs  template.rs  workload.rs
crates/akira-core/src/api/mock/: config.rs  deployment.rs  mod.rs  template.rs  workload.rs
crates/akira-core/src/git/: memory.rs  mod.rs  remote.rs  repo.rs
crates/akira-memory-stream/: Cargo.toml
crates/akira-memory-stream/src/: memory.rs
crates/akira-mqtt-stream/: Cargo.toml
crates/akira-mqtt-stream/src/: mqtt.rs
crates/akira-postgresql-stream/: .env  .env.test  Cargo.toml  sqlx-data.json
crates/akira-postgresql-stream/migrations/2022-08-15-224327_add_event_queue/: down.sql  up.sql
crates/akira-postgresql-stream/src/: db.rs  event.rs  lib.rs  model.rs  postgresql.rs  schema.rs
crates/fabriq-core/: Cargo.toml  build.rs
crates/fabriq-core/proto/: assignment.proto  common.proto  config.proto  deployment.proto  event.proto  health.proto  host.proto  target.proto  template.proto  workload.proto
crates/fabriq-core/src/: event_stream.rs  lib.rs  protobufs.rs  test.rs
crates/fabriq-core/src/api/client/: deployment.rs  template.rs
crates/fabriq-core/src/api/mock/: config.rs  deployment.rs  template.rs  workload.rs
crates/fabriq-core/src/git/: memory.rs  mod.rs  remote.rs  repo.rs
crates/fabriq-memory-stream/: Cargo.toml
crates/fabriq-memory-stream/src/: lib.rs  memory.rs
crates/fabriq-mqtt-stream/: Cargo.toml
crates/fabriq-mqtt-stream/src/: lib.rs  mqtt.rs
crates/fabriq-postgresql-stream/: Cargo.toml  sqlx-data.json
crates/fabriq-postgresql-stream/src/: model.rs  postgresql.rs
migrations/: 20221003224815_create-templates.up.sql  20221003225402_create-hosts.up.sql  20221003225453_create-workloads.down.sql  20221003225453_create-workloads.up.sql  20221003225517_create-targets.up.sql  20221003225541_create-deployments.up.sql  20221003225606_create-assignments.up.sql  20221009164846_create-events.up.sql
migrations/2022-04-24-222604_create_workspaces/: down.sql  up.sql
migrations/2022-04-25-013124_create_templates/: up.sql
migrations/2022-04-25-013125_create_hosts/: up.sql
migrations/2022-04-25-013126_create_workloads/: up.sql
migrations/2022-04-25-013633_create_targets/: down.sql
migrations/2022-04-25-013634_create_deployment/: down.sql  up.sql
migrations/2022-05-22-091653_create_assignments/: down.sql  up.sql
migrations/2022-05-29-194551_create_config/: up.sql
migrations/2022-06-10-191004_add_assignments_deployment_id_index/: down.sql  up.sql
migrations/2022-07-12-184842_add_config_value_type/: down.sql  up.sql
migrations/2022-07-13-192244_add_name_columns/: down.sql  up.sql
src/: schema.rs
src/cli/: assignment.rs  config.rs  context.rs  deployment.rs  host.rs  login.rs  main.rs  profile.rs  target.rs  team.rs  template.rs  workload.rs  workspace.rs
src/gitops/: context.rs  main.rs  processor.rs  repo.rs
src/reconciler/: deployment.rs  main.rs  mod.rs  reconciler.rs
src/service/: acl.rs  db.rs  hybrid.rs  lib.rs  main.rs  schema.rs
src/service/api/: assignment.rs  config.rs  deployment.rs  health.rs  host.rs  mod.rs  target.rs  template.rs  workload.rs  workspace.rs
src/service/grpc/: assignment.rs  auth.rs  config.rs  deployment.rs  host.rs  mod.rs  target.rs  template.rs  workload.rs
src/service/http/: health.rs  mod.rs  webhook.rs
src/service/models/: assignment.rs  config.rs  deployment.rs  host.rs  mod.rs  target.rs  template.rs  workload.rs  workspace.rs
src/service/persistence/: memory.rs  mod.rs
src/service/persistence/memory/: assignment.rs  config.rs  deployment.rs  generic.rs  host.rs  mod.rs  workload.rs
src/service/persistence/relational/: assignment.rs  config.rs  deployment.rs  host.rs  mod.rs  target.rs  template.rs  workload.rs  workspace.rs
src/service/processor/: core.rs  mod.rs
src/service/reconcilation/: mod.rs  reconciler.rs
src/service/services/: architecture.md  assignment.rs  config.rs  deployment.rs  host.rs  mod.rs  service.rs  target.rs  template.rs  workload.rs  workspace.rs
templates/: assignment.yaml
tests/: integration.rs
tests/fixtures/: deployment.yaml
tools/: backup-psql  build-cli  check  download-latest-cli.sh  pre_release_build.sh  restore-psql
