[package]
name = "akira"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/akira-core",
    "crates/akira-memory-stream",
    "crates/akira-postgresql-stream"
]

[dependencies]
akira-core = { path = "crates/akira-core" }
akira-postgresql-stream = { path = "crates/akira-postgresql-stream" }
anyhow = "1.0"
ascii_table = { version = "4.0", features = ["auto_table_width"] }
async-trait = "0.1"
clap = { version = "3.1", features = ["derive"] }
dirs = "4.0"
dotenvy = "0.15"
handlebars = "4.3"
hyper = "0.14"
lazy_static = "1.3"
octocrab = { version = "0.17", default-features = false }
opentelemetry = { version = "0.17" }
opentelemetry-jaeger = { version = "0.16" }
prost = "0.10"
prost-types = "0.10"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "chrono", "json", "offline", "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1.14", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tonic = "0.7"
tonic-web = "0.3"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
tracing-opentelemetry = "0.17"
uuid = { version = "1.1", features = ["v4"] }

[dev-dependencies]
akira-memory-stream = { path = "crates/akira-memory-stream" }

[profile.release]
lto = true

[lib]
name = "akira"
path = "src/service/lib.rs"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[[bin]]
name = "reconciler"
path = "src/reconciler/main.rs"

[[bin]]
name = "gitops"
path = "src/gitops/main.rs"

[[bin]]
name = "service"
path = "src/service/main.rs"
