[package]
name = "fabriq"
version = "0.1.1"
edition = "2021"

[workspace]
members = [
    "crates/fabriq-core",
    "crates/fabriq-memory-stream",
    "crates/fabriq-postgresql-stream"
]

[dependencies]
fabriq-core = { path = "crates/fabriq-core" }
fabriq-postgresql-stream = { path = "crates/fabriq-postgresql-stream" }

anyhow = "1.0"
ascii_table = { version = "4.0", features = ["auto_table_width"] }
async-trait = "0.1"
axum = { version = "0.5" }
base64 = "0.13"
clap = { version = "4.0", features = ["derive"] }
dirs = "4.0"
dotenvy = "0.15"
handlebars = "4.3"
hyper = "0.14"
lazy_static = "1.3"
octocrab = { version = "0.17", default-features = false }
openssl = { version = "0.10", features = ["vendored"] }
opentelemetry = { version = "0.18", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-jaeger = { version = "0.17" }
opentelemetry-otlp = { version = "0.11", features = ["metrics", "tls", "tonic"] }
opentelemetry-semantic-conventions = "0.10"
pin-project = "1.0"
prost = "0.11"
prost-types = "0.11"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "chrono", "json", "offline", "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1.14", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tonic = { version = "0.8.2", features = ["tls-roots"] }
tonic-web = "0.4"
tonic-reflection = "0.5"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
tracing-opentelemetry = "0.18"
uuid = { version = "1.1", features = ["v4"] }
url = "2.2"

[dev-dependencies]
fabriq-memory-stream = { path = "crates/fabriq-memory-stream" }

[profile.release]
lto = true

[[bin]]
name = "fabriq"
path = "src/cli/main.rs"

[[bin]]
name = "gitops"
path = "src/gitops/main.rs"

[[bin]]
name = "api"
path = "src/service/main.rs"
