[package]
name = "akira-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
bincode = "1.3"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
prost = "0.10"
prost-types = "0.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.14", features = ["macros", "rt", "rt-multi-thread"] }
tonic = "0.7"
tracing = "0.1"
uuid = { version = "1.1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.7"