[package]
name = "akira-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
git2 = "0.15"
prost = "0.10"
prost-types = "0.10"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.3"
tokio = { version = "1.14", features = ["macros", "rt", "rt-multi-thread"] }
tonic = "0.7"
tracing = "0.1"
uuid = { version = "1.1", features = ["v4"] }

[dev-dependencies]
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.7"
