[package]
name = "akira-mqtt-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
akira-core = { path = "../akira-core" }
bytes = "1.1"
paho-mqtt = "0.11"
prost = "0.10"
prost-types = "0.10"
