[package]
name = "akira-postgresql-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
akira-core = { path = "../akira-core" }
anyhow = "1.0"
bytes = "1.1"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
lazy_static = "1.3"
prost = "0.10"
prost-types = "0.10"

[dev-dependencies]
dotenv = "0.15.0"
