[package]
name = "akira-postgresql-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
akira-core = { path = "../akira-core" }
anyhow = "1.0"
bytes = "1.1"
chrono = "0.4"
lazy_static = "1.3"
prost = "0.10"
prost-types = "0.10"
sqlx = { version = "0.6", features = [ "chrono", "json", "offline", "postgres", "runtime-tokio-native-tls" ] }
tokio = { version = "1.14", features = ["fs", "macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
dotenvy = "0.15"
