[package]
name = "fabriq-memory-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
fabriq-core = { path = "../fabriq-core" }
anyhow = "1.0"
bytes = "1.1"
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1.14", features = ["fs", "macros", "rt", "rt-multi-thread"] }
uuid = { version = "1.1", features = ["v4"] }