[package]
name = "fabriq-mqtt-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
fabriq-core = { path = "../fabriq-core" }
bytes = "1.1"
paho-mqtt = "0.11"
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1.14", features = ["fs", "macros", "rt", "rt-multi-thread"] }
